--- a/popup.html
+++ b/popup.html
@@ -1,21 +1,25 @@
 <!doctype html>
 <html>
   <head>
-    <title>Getting Started Extension's Popup</title>
-    <style>
-      body {
-        font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
-        font-size: 100%;
-      }
-    </style>
+  <title>Getting Started Extension's Popup</title>
+    <link rel="stylesheet", type="text/css" href="popup.css">
+  </head>
+  <body>
+
+      <div id="content">
+        <h4> Markdown</h4>
+        <textarea placeholder="Type something!"rows="10", cols="50" id="input"></textarea>
+        <button id="convert">Convert</button>
+        <button id="clear">Clear</button>
+        <h4> JIRA </h4>
+        <textarea rows="10", cols="50" id="output"></textarea>
+
+        </div>
+      </div>
+    <script src="jquery-2.1.3.min.js"></script>
     <script src="marked/lib/marked.js"></script>
     <script src="renderer/confluence.js"></script>
     <script src="popup.js"></script>
-  </head>
-  <body>
-    <pre>
-      <div id="content"></div>
-    </pre>
   </body>
 </html>
 
